Using injector framework to inject dependencies.

--- a/app/logging_config.json
+++ b/app/logging_config.json
@@ -20,7 +20,7 @@
             "class": "logging.FileHandler",
             "level": "DEBUG",
             "formatter": "detailed",
-            "filename": "../logs/app.log",
+            "filename": "logs/app.log",
             "mode": "a",
             "encoding": "utf-8"
         }
