--- a/.pylintrc
+++ b/.pylintrc
@@ -46,7 +46,7 @@ fail-under=10
 #from-stdin=
 
 # Files or directories to be skipped. They should be base names, not paths.
-ignore=CVS
+ignore=tests,docs
 
 # Add files or directories matching the regular expressions patterns to the
 # ignore-list. The regex matches against paths and can be in Posix or Windows
@@ -103,6 +103,7 @@ unsafe-load-any-extension=no
 
 # In verbose mode, extra non-checker-related info will be displayed.
 #verbose=
+
 
 
 [BASIC]
@@ -423,9 +424,6 @@ disable=raw-checker-failed,
         deprecated-pragma,
         use-symbolic-message-instead,
         broad-except
-
-[BASIC]
-tests-patterns=test_.*\.py,.*_test\.py
 
 [MESSAGES CONTROL FOR TESTS]
 disable=missing-function-docstring
