--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,15 +15,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.10
+      - name: Set up Python 3.7
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.7"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV          
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
