Fixes errors in GitHub workflow

--- a/app/logging_config.json
+++ b/app/logging_config.json
@@ -21,7 +21,7 @@
             "level": "DEBUG",
             "formatter": "detailed",
             "filename": "logs/app.log",
-            "mode": "a",
+            "mode": "w",
             "encoding": "utf-8"
         }
     },
