Fixes errors in GitHub workflow with not finding log folder in tests

--- a/app/logging_config.json
+++ b/app/logging_config.json
@@ -21,7 +21,7 @@
             "level": "DEBUG",
             "formatter": "detailed",
             "filename": "logs/app.log",
-            "mode": "w",
+            "mode": "a",
             "encoding": "utf-8"
         }
     },
