Fixes GitHub workflow warning: update the following actions to use Node.js 20

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v3
+      - name: Check out repository
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          node-version: '20'
           python-version: "3.7"
       - name: Install dependencies
         run: |
